--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <header>
-
+        
+        <h1 class="heading1">GitHub-Profile-README-Generator</h1>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
