--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <img src="GRG.png" alt="Logo" class="center">
         <h1 class="heading1">GitHub-Profile-README-Generator</h1>
-   
+        
+    </header>
     <main>
 
     </main>
