--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <header>
-        <img src="GRG.png" alt="Logo" class="center">
-        <h1 class="heading1">GitHub-Profile-README-Generator</h1>
-        
+        <pre><img src="GRG.png" alt="Logo"> <h1 class="heading1">GitHub-Profile-README-Generator</h1>
+            </pre>    
     </header>
     <main>
 
