--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             </pre>    
     </header>
     <main>
-
+        <div class="titles">
+            Title<br><input type="text">
+        </div>
     </main>
     <footer>
 
